--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <h1>Welcome to my Castle!</h1>
-    <img src="./images/normandy.webp" alt="Castle">
+    <img src="./images/normandy.webp" alt="Castle"/>
     <p>
-        <a href="./profile">My profile page</a>
+        <a href="/profile">My profile page</a>
     </p>
 
 
