--- a/public/profile.html
+++ b/public/profile.html
@@ -7,5 +7,13 @@
 </head>
 <body>
     <h1>Hi this is my profile</h1>
+
+    <button id="critcal">Critical</button>
+    <button id="warning">Warning</button>
+
+
+    <script src="./main.js"></script>
 </body>
+
+
 </html>
